K8S/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops-app
spec:
  type: ClusterIP # נשאיר כ-ClusterIP כי ה-Ingress יטפל בחשיפה החוצה
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80        # הפורט שה-Service יחשוף בתוך הקלאסטר (ל-Ingress)
      targetPort: 8080 # הפורט שבו Nginx מאזין בפועל (כפי שהגדרנו ב-Deployment)
