K8S/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: devops-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        # yamllint disable-line rule:line-length
        - a6d620dff3eac490399c417ab62de235-1512107249.us-east-1.elb.amazonaws.com
      secretName: mission-tls
  rules:
    # yamllint disable-line rule:line-length
    - host: a6d620dff3eac490399c417ab62de235-1512107249.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
